# agentic-structured-rag

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: push_docker_image.yml
Dataset/: domande.csv  domande_con_risposte.csv
Dataset/ground_truth/: ground_truth_mapped.csv
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  DEVELOPMENT_PLAN.md
src/: api.py  evaluate_result.py  ingestion.py  run_inference.py
src/app/: config.py  orchestrator.py  submission.py
src/app/agents/: sql_agent.py  vector_store_agent.py
src/evaluation/: evaluate_detailed_inference_result.py  generate_kaggle_submission_file.py  generate_submission_file.py  jaccard_evaluation.py  llm_evaluation.py  run_detailed_inference.py  run_inference.py
src/ingestion/: blog_ingestion.py  cook_manual_ingestion.py  distances_ingestion.py  galactic_code_ingestion.py  ingestion_manager.py  knowledge_manager.py  menu_ingestion.py  runner.py  structured_extraction.py  vision_fallback.py
src/ingestion/ingestors/: base_ingestor.py  blog_ingestor.py  cook_manual_ingestor.py  distances_ingestor.py  galactic_code_ingestor.py  menu_ingestor.py
src/model/: cook_manual.py  menu.py
src/utils/: argparser_utils.py  ingestion_utils.py  normalizer_utils.py  sql_utils.py  validation_utils.py
tests/: test_end_to_end_local_model.py  test_end_to_end_qdrant_sources.py  test_phase0_spike.py  test_phase1_infrastructure.py  test_phase2_ingestion_smoke.py  test_phase3_easy_pipeline.py
