[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-structured-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "pandas>=2.0.0",
    "duckdb>=1.0.0",
    "json-repair",
    "dotenv",
    "fastapi",
    "pandas",
    "uvicorn",
    "easyocr",
    "datapizza-ai",
    "datapizza-ai-clients-openai-like",
    "datapizza-ai-embedders-openai",
    "datapizza-ai-vectorstores-qdrant",
    "datapizza-ai-parsers-docling",
]

[tool.setuptools.packages.find]
where = ["src"]